objects/SVMXC__RMA_Shipment_Line__c.object
<CustomObject>
    <fields>
        <fullName>BD_Return_Part_Number__c</fullName>
        <label>Return Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnum__c</fullName>
        <description>Same as SAP Product code. Same as Material Number from SAP.</description>
        <inlineHelpText>Same as SAP Product code. Same as Material Number from SAP.</inlineHelpText>
        <label>Part Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BatchNum__c</fullName>
        <description>Batch number related to the parts order line</description>
        <inlineHelpText>Batch number related to the parts order line</inlineHelpText>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DecontaminationCertificateEnclos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Decontamination Certificate Enclosed</description>
        <inlineHelpText>Decontamination Certificate Enclosed</inlineHelpText>
        <label>Decontamination Certificate Enclosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Decontamination__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the parts order line is decontamination</description>
        <inlineHelpText>Denotes if the parts order line is decontamination</inlineHelpText>
        <label>Decontamination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expected_Arrival__c</fullName>
        <description>Expected time of arrival per the Logistics team.</description>
        <inlineHelpText>Expected time of arrival per the Logistics team.</inlineHelpText>
        <label>Expected Arrival</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ExternalId__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID</inlineHelpText>
        <label>SAP Quote Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_LineDescription__c</fullName>
        <description>Denotes the line description about the parts order line</description>
        <inlineHelpText>Denotes the line description about the parts order line</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_My_Parts_Order_Line__c</fullName>
        <description>Denotes that the parts order line is owned by the running user</description>
        <formula>IF( SVMXC__RMA_Shipment_Order__r.OwnerId ==  $User.Id &amp;&amp; (Today() - DATEVALUE(CreatedDate)) &lt;= 90 , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes that the parts order line is owned by the running user</inlineHelpText>
        <label>My Parts Order Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Part_Number__c</fullName>
        <formula>SVMXC__Product__r.Partnum__c</formula>
        <label>Part Number (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Family__c</fullName>
        <description>This custom formula field displays the Product Family field from the Product Object</description>
        <formula>TEXT(SVMXC__Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This custom formula field displays the Product Family field from the Product Object</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to limit products by sales org.</description>
        <inlineHelpText>Used to limit products by sales org.</inlineHelpText>
        <label>Sellable Product</label>
        <referenceTo>SMAX_PS_ProductSales__c</referenceTo>
        <relationshipLabel>Parts Order Lines</relationshipLabel>
        <relationshipName>Parts_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_ReturnReason__c</fullName>
        <description>Denotes product return reason</description>
        <inlineHelpText>Denotes product return reason</inlineHelpText>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Reduction</fullName>
                </value>
                <value>
                    <fullName>DOA</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>QM evaluation</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SerialNum__c</fullName>
        <description>serial number related to the parts order</description>
        <inlineHelpText>serial number related to the parts order</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>